--- a/JCommerce.Presentacion/JCommerce.Presentacion.csproj
+++ b/JCommerce.Presentacion/JCommerce.Presentacion.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FontAwesome.Sharp" Version="6.3.0" />
+  </ItemGroup>
+
 </Project>
